k8s/base/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: harbourline-db
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: harbourline-db
  template:
    metadata:
      labels:
        app: harbourline-db
    spec:
      nodeSelector:
        tier: database
      securityContext:
        runAsNonRoot: true
        runAsUser: 70
        runAsGroup: 70
        fsGroup: 70
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 512Mi
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: harbourline-pgdata
---
apiVersion: v1
kind: Service
metadata:
  name: harbourline-db
spec:
  selector:
    app: harbourline-db
  ports:
    - port: 5432
      targetPort: 5432
