k8s/base/db-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: harbourline-db
spec:
  clusterIP: None
  selector:
    app: harbourline-db
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: harbourline-db
spec:
  serviceName: harbourline-db
  replicas: 1
  selector:
    matchLabels:
      app: harbourline-db
  template:
    metadata:
      labels:
        app: harbourline-db
    spec:
      nodeSelector:
        tier: database
      securityContext:
        runAsNonRoot: true
        runAsUser: 70
        runAsGroup: 70
        fsGroup: 70
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
              name: postgres
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 512Mi
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: standard
        resources:
          requests:
            storage: 1Gi
