k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbourline
spec:
  ingressClassName: nginx
  rules:
    - host: harbourline.localtest.me
      http:
        paths:
          - path: /reports
            pathType: Prefix
            backend:
              service:
                name: harbourline-reports
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: harbourline-web
                port:
                  number: 80
